--- a/Data_Preparation.ipynb
+++ b/Data_Preparation.ipynb
@@ -286,7 +286,7 @@
    "outputs": [],
    "source": [
     "LiP_norm = df['Log2FC(LiP_norm)']\n",
-    "tokenizer_train, tokenizer_test, LiP_norm_train, LiP_norm_test = train_test_split(X, y, test_size = 0.25)"
+    "tokenizer_train, tokenizer_test, LiP_norm_train, LiP_norm_test = train_test_split(tokenizer, LiP_norm, test_size = 0.25)"
    ]
   }
  ],
