Data prep for training

--- a/5. dl_model.ipynb
+++ b/5. dl_model.ipynb
@@ -27,6 +27,459 @@
     "# Merge the two and get the final dataset\n",
     "dataset = df.merge(embeddings, left_index=True, right_index=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Log2FC(LiP_norm)</th>\n",
+       "      <th>Binary_Positions</th>\n",
+       "      <th>full_embedding</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Uniprot_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A5Z2X5</th>\n",
+       "      <td>-0.153604</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[8848178386688232, 7881519943475723, 428928285...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A5Z2X5</th>\n",
+       "      <td>-1.869623</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[8848178386688232, 7881519943475723, 428928285...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D6VTK4</th>\n",
+       "      <td>-0.008114</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[47565970569849014, 7273535244166851, 22035147...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>O13297</th>\n",
+       "      <td>-0.374875</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[21353999618440866, 15769580379128456, 4766600...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>O13297</th>\n",
+       "      <td>-0.207803</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[21353999618440866, 15769580379128456, 4766600...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Log2FC(LiP_norm)  \\\n",
+       "Uniprot_ID                     \n",
+       "A5Z2X5             -0.153604   \n",
+       "A5Z2X5             -1.869623   \n",
+       "D6VTK4             -0.008114   \n",
+       "O13297             -0.374875   \n",
+       "O13297             -0.207803   \n",
+       "\n",
+       "                                             Binary_Positions  \\\n",
+       "Uniprot_ID                                                      \n",
+       "A5Z2X5      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "A5Z2X5      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "D6VTK4      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "O13297      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "O13297      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "\n",
+       "                                               full_embedding  \n",
+       "Uniprot_ID                                                     \n",
+       "A5Z2X5      [8848178386688232, 7881519943475723, 428928285...  \n",
+       "A5Z2X5      [8848178386688232, 7881519943475723, 428928285...  \n",
+       "D6VTK4      [47565970569849014, 7273535244166851, 22035147...  \n",
+       "O13297      [21353999618440866, 15769580379128456, 4766600...  \n",
+       "O13297      [21353999618440866, 15769580379128456, 4766600...  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def convert_to_list(number_string):\n",
+    "    cleaned_string = re.sub(r\"[^\\d,\\s]\", \"\", number_string)\n",
+    "    return list(map(int, cleaned_string.split(',')))\n",
+    "\n",
+    "dataset['full_embedding'] = dataset['full_embedding'].apply(convert_to_list)\n",
+    "dataset['Binary_Positions'] = dataset['Binary_Positions'].apply(convert_to_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import numpy as np\n",
+    "\n",
+    "embedding_array = np.array(dataset['full_embedding'].tolist(), dtype=np.float32)\n",
+    "full_embedding = torch.tensor(embedding_array)\n",
+    "\n",
+    "position_embedding_dim = len(dataset.iloc[0, 2]) \n",
+    "num_positions = 20\n",
+    "position_embedding = nn.Embedding(num_embeddings=num_positions, embedding_dim=position_embedding_dim)\n",
+    "\n",
+    "position_indices = torch.tensor([x[0] for x in dataset['Binary_Positions']])\n",
+    "\n",
+    "position_embed = position_embedding(position_indices)\n",
+    "\n",
+    "combined_embeddings = position_embed + full_embedding\n",
+    "\n",
+    "combined_embeddings_list = combined_embeddings.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new DataFrame using the original DataFrame's index\n",
+    "X = pd.DataFrame(combined_embeddings_list, index=dataset.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>1270</th>\n",
+       "      <th>1271</th>\n",
+       "      <th>1272</th>\n",
+       "      <th>1273</th>\n",
+       "      <th>1274</th>\n",
+       "      <th>1275</th>\n",
+       "      <th>1276</th>\n",
+       "      <th>1277</th>\n",
+       "      <th>1278</th>\n",
+       "      <th>1279</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Uniprot_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A5Z2X5</th>\n",
+       "      <td>8.848179e+15</td>\n",
+       "      <td>7.881520e+15</td>\n",
+       "      <td>4.289283e+16</td>\n",
+       "      <td>1.710427e+16</td>\n",
+       "      <td>7.472561e+15</td>\n",
+       "      <td>1.246796e+15</td>\n",
+       "      <td>2.859221e+15</td>\n",
+       "      <td>4.647810e+14</td>\n",
+       "      <td>3.386821e+13</td>\n",
+       "      <td>7.752636e+15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.445937e+15</td>\n",
+       "      <td>5.214862e+16</td>\n",
+       "      <td>5.950918e+15</td>\n",
+       "      <td>2.992804e+15</td>\n",
+       "      <td>2.186712e+16</td>\n",
+       "      <td>2.490647e+16</td>\n",
+       "      <td>9.536843e+15</td>\n",
+       "      <td>2.424401e+16</td>\n",
+       "      <td>3.110352e+15</td>\n",
+       "      <td>3.304118e+15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A5Z2X5</th>\n",
+       "      <td>8.848179e+15</td>\n",
+       "      <td>7.881520e+15</td>\n",
+       "      <td>4.289283e+16</td>\n",
+       "      <td>1.710427e+16</td>\n",
+       "      <td>7.472561e+15</td>\n",
+       "      <td>1.246796e+15</td>\n",
+       "      <td>2.859221e+15</td>\n",
+       "      <td>4.647810e+14</td>\n",
+       "      <td>3.386821e+13</td>\n",
+       "      <td>7.752636e+15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.445937e+15</td>\n",
+       "      <td>5.214862e+16</td>\n",
+       "      <td>5.950918e+15</td>\n",
+       "      <td>2.992804e+15</td>\n",
+       "      <td>2.186712e+16</td>\n",
+       "      <td>2.490647e+16</td>\n",
+       "      <td>9.536843e+15</td>\n",
+       "      <td>2.424401e+16</td>\n",
+       "      <td>3.110352e+15</td>\n",
+       "      <td>3.304118e+15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D6VTK4</th>\n",
+       "      <td>4.756597e+16</td>\n",
+       "      <td>7.273535e+15</td>\n",
+       "      <td>2.203515e+14</td>\n",
+       "      <td>6.608049e+14</td>\n",
+       "      <td>3.326045e+15</td>\n",
+       "      <td>7.376782e+15</td>\n",
+       "      <td>1.223982e+16</td>\n",
+       "      <td>1.203883e+16</td>\n",
+       "      <td>1.552944e+16</td>\n",
+       "      <td>5.348460e+15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.309712e+15</td>\n",
+       "      <td>6.676825e+15</td>\n",
+       "      <td>7.294690e+15</td>\n",
+       "      <td>5.301362e+16</td>\n",
+       "      <td>2.983132e+15</td>\n",
+       "      <td>3.740367e+15</td>\n",
+       "      <td>1.510385e+16</td>\n",
+       "      <td>1.461948e+16</td>\n",
+       "      <td>4.779517e+16</td>\n",
+       "      <td>6.978594e+14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>O13297</th>\n",
+       "      <td>2.135400e+16</td>\n",
+       "      <td>1.576958e+16</td>\n",
+       "      <td>4.766600e+16</td>\n",
+       "      <td>1.534467e+16</td>\n",
+       "      <td>2.267701e+15</td>\n",
+       "      <td>5.980504e+15</td>\n",
+       "      <td>3.956593e+15</td>\n",
+       "      <td>9.986967e+15</td>\n",
+       "      <td>2.456207e+15</td>\n",
+       "      <td>3.738843e+16</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.076984e+15</td>\n",
+       "      <td>8.298277e+15</td>\n",
+       "      <td>4.864088e+15</td>\n",
+       "      <td>2.892880e+15</td>\n",
+       "      <td>2.022724e+15</td>\n",
+       "      <td>3.994240e+15</td>\n",
+       "      <td>6.644006e+15</td>\n",
+       "      <td>1.113248e+16</td>\n",
+       "      <td>3.134675e+16</td>\n",
+       "      <td>7.254029e+14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>O13297</th>\n",
+       "      <td>2.135400e+16</td>\n",
+       "      <td>1.576958e+16</td>\n",
+       "      <td>4.766600e+16</td>\n",
+       "      <td>1.534467e+16</td>\n",
+       "      <td>2.267701e+15</td>\n",
+       "      <td>5.980504e+15</td>\n",
+       "      <td>3.956593e+15</td>\n",
+       "      <td>9.986967e+15</td>\n",
+       "      <td>2.456207e+15</td>\n",
+       "      <td>3.738843e+16</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.076984e+15</td>\n",
+       "      <td>8.298277e+15</td>\n",
+       "      <td>4.864088e+15</td>\n",
+       "      <td>2.892880e+15</td>\n",
+       "      <td>2.022724e+15</td>\n",
+       "      <td>3.994240e+15</td>\n",
+       "      <td>6.644006e+15</td>\n",
+       "      <td>1.113248e+16</td>\n",
+       "      <td>3.134675e+16</td>\n",
+       "      <td>7.254029e+14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 1280 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    0             1             2             3     \\\n",
+       "Uniprot_ID                                                           \n",
+       "A5Z2X5      8.848179e+15  7.881520e+15  4.289283e+16  1.710427e+16   \n",
+       "A5Z2X5      8.848179e+15  7.881520e+15  4.289283e+16  1.710427e+16   \n",
+       "D6VTK4      4.756597e+16  7.273535e+15  2.203515e+14  6.608049e+14   \n",
+       "O13297      2.135400e+16  1.576958e+16  4.766600e+16  1.534467e+16   \n",
+       "O13297      2.135400e+16  1.576958e+16  4.766600e+16  1.534467e+16   \n",
+       "\n",
+       "                    4             5             6             7     \\\n",
+       "Uniprot_ID                                                           \n",
+       "A5Z2X5      7.472561e+15  1.246796e+15  2.859221e+15  4.647810e+14   \n",
+       "A5Z2X5      7.472561e+15  1.246796e+15  2.859221e+15  4.647810e+14   \n",
+       "D6VTK4      3.326045e+15  7.376782e+15  1.223982e+16  1.203883e+16   \n",
+       "O13297      2.267701e+15  5.980504e+15  3.956593e+15  9.986967e+15   \n",
+       "O13297      2.267701e+15  5.980504e+15  3.956593e+15  9.986967e+15   \n",
+       "\n",
+       "                    8             9     ...          1270          1271  \\\n",
+       "Uniprot_ID                              ...                               \n",
+       "A5Z2X5      3.386821e+13  7.752636e+15  ...  5.445937e+15  5.214862e+16   \n",
+       "A5Z2X5      3.386821e+13  7.752636e+15  ...  5.445937e+15  5.214862e+16   \n",
+       "D6VTK4      1.552944e+16  5.348460e+15  ...  5.309712e+15  6.676825e+15   \n",
+       "O13297      2.456207e+15  3.738843e+16  ...  9.076984e+15  8.298277e+15   \n",
+       "O13297      2.456207e+15  3.738843e+16  ...  9.076984e+15  8.298277e+15   \n",
+       "\n",
+       "                    1272          1273          1274          1275  \\\n",
+       "Uniprot_ID                                                           \n",
+       "A5Z2X5      5.950918e+15  2.992804e+15  2.186712e+16  2.490647e+16   \n",
+       "A5Z2X5      5.950918e+15  2.992804e+15  2.186712e+16  2.490647e+16   \n",
+       "D6VTK4      7.294690e+15  5.301362e+16  2.983132e+15  3.740367e+15   \n",
+       "O13297      4.864088e+15  2.892880e+15  2.022724e+15  3.994240e+15   \n",
+       "O13297      4.864088e+15  2.892880e+15  2.022724e+15  3.994240e+15   \n",
+       "\n",
+       "                    1276          1277          1278          1279  \n",
+       "Uniprot_ID                                                          \n",
+       "A5Z2X5      9.536843e+15  2.424401e+16  3.110352e+15  3.304118e+15  \n",
+       "A5Z2X5      9.536843e+15  2.424401e+16  3.110352e+15  3.304118e+15  \n",
+       "D6VTK4      1.510385e+16  1.461948e+16  4.779517e+16  6.978594e+14  \n",
+       "O13297      6.644006e+15  1.113248e+16  3.134675e+16  7.254029e+14  \n",
+       "O13297      6.644006e+15  1.113248e+16  3.134675e+16  7.254029e+14  \n",
+       "\n",
+       "[5 rows x 1280 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = dataset['Log2FC(LiP_norm)']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Uniprot_ID\n",
+       "A5Z2X5   -0.153604\n",
+       "A5Z2X5   -1.869623\n",
+       "D6VTK4   -0.008114\n",
+       "O13297   -0.374875\n",
+       "O13297   -0.207803\n",
+       "Name: Log2FC(LiP_norm), dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
